[package]
name = "enku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
image = "0.25"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
	"Document",
	"Element",
	"NodeList",
	"DataTransfer",
	"DragEvent",
	"HtmlImageElement",
	"Headers",
	"Request",
	"RequestInit",
	"RequestMode",
	"HtmlLabelElement",
	"Response",
	"Location",
	"Url",
	"Blob",
	"BlobPropertyBag",
	"Window"
]

[profile.release]
strip=true
lto=true

