[package]
name = "enku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
image = "0.25"
console_error_panic_hook = "0.1"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
	"Document",
	"Element",
	"NodeList",
	"DataTransfer",
	"DragEvent",
	"HtmlImageElement",
	"Headers",
	"Navigator",
	"Request",
	"RequestInit",
	"RequestMode",
	"HtmlLabelElement",
	"Response",
	"Location",
	"Url",
	"Blob",
	"BlobPropertyBag",
	"Window",
	"console"
]

[profile.release]
strip=true
lto=true
opt-level='z'
